[package]
name = "advent-of-rust"
version = "0.1.0"
authors = ["kalvatn"]
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "2015-01"
path = "src/bin/2015/01.rs"

[[bin]]
name = "2015-02"
path = "src/bin/2015/02.rs"

[[bin]]
name = "2015-03"
path = "src/bin/2015/03.rs"

[[bin]]
name = "2015-04"
path = "src/bin/2015/04.rs"

[[bin]]
name = "2015-05"
path = "src/bin/2015/05.rs"

[[bin]]
name = "2015-06"
path = "src/bin/2015/06.rs"

[[bin]]
name = "2015-07"
path = "src/bin/2015/07.rs"

[[bin]]
name = "2015-08"
path = "src/bin/2015/08.rs"

[[bin]]
name = "2015-09"
path = "src/bin/2015/09.rs"

[[bin]]
name = "2015-10"
path = "src/bin/2015/10.rs"

[[bin]]
name = "2015-11"
path = "src/bin/2015/11.rs"

[[bin]]
name = "2015-12"
path = "src/bin/2015/12.rs"

[[bin]]
name = "2015-13"
path = "src/bin/2015/13.rs"

[[bin]]
name = "2015-14"
path = "src/bin/2015/14.rs"


[[bin]]
name = "2016-01"
path = "src/bin/2016/01.rs"

[[bin]]
name = "2020-01"
path = "src/bin/2020/01.rs"

[[bin]]
name = "2020-02"
path = "src/bin/2020/02.rs"

[[bin]]
name = "2020-03"
path = "src/bin/2020/03.rs"

[[bin]]
name = "2020-04"
path = "src/bin/2020/04.rs"

[[bin]]
name = "2020-05"
path = "src/bin/2020/05.rs"

[[bin]]
name = "2020-06"
path = "src/bin/2020/06.rs"

[[bin]]
name = "2020-07"
path = "src/bin/2020/07.rs"

[[bin]]
name = "2020-08"
path = "src/bin/2020/08.rs"

[[bin]]
name = "2020-09"
path = "src/bin/2020/09.rs"

[[bin]]
name = "2020-10"
path = "src/bin/2020/10.rs"

[[bin]]
name = "2020-11"
path = "src/bin/2020/11.rs"

[[bin]]
name = "2020-12"
path = "src/bin/2020/12.rs"

[[bin]]
name = "2020-13"
path = "src/bin/2020/13.rs"

[[bin]]
name = "2020-14"
path = "src/bin/2020/14.rs"

[[bin]]
name = "2020-15"
path = "src/bin/2020/15.rs"

[[bin]]
name = "2020-16"
path = "src/bin/2020/16.rs"

[dependencies]
md5 = "0.7.0"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.9", features = ["blocking"] }
regex = "1.3.9"
lazy_static = "1.4.0"
petgraph = "0.5.1"
serde_json = "1.0"
itertools = "0.9.0"
primes = "0.3.0"
serde_scan = "0.4.1"
num = "0.3.1"
