[package]
name = "aoc-common"
version = "0.1.0"
authors = ["Jon Terje Tvergrov Kalvatn <j.kalvatn@sportradar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
